tests/manifests/testgatewayclass1.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: testgatewayclass1
spec:
  controllerName: example.com/gateway-controller
status:
  conditions:
  - lastTransitionTime: "2023-08-16T22:13:42Z"
    message: Handled by example.com/gateway-controller
    observedGeneration: 1
    reason: Accepted
    status: "True"
    type: Accepted
  supportedFeatures:
  - HTTPRoute
  - HTTPRouteHostRewrite
  - HTTPRoutePortRedirect
  - HTTPRouteQueryParamMatching
