tests/manifests/testratelimitpolicy.yaml
apiVersion: kuadrant.io/v1
kind: RateLimitPolicy
metadata:
  name: testratelimitpolicy1
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: testname1
  limits:
    alice-limit:
      rates:
        - limit: 5
          window: 10s
      when:
        - predicate: auth.identity.userid == 'alice'
    bob-limit:
      rates:
        - limit: 2
          window: 10s
      when:
        - predicate: auth.identity.userid == 'bob'
status:
  conditions:
  - lastTransitionTime: "2023-08-21T22:53:08Z"
    message: HTTPRoute is ratelimited
    reason: HTTPRouteProtected
    status: "True"
    type: Available
