tests/manifests/testtcproute1.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: testtcproute1
  namespace: default
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: testgateway1
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: echo
      port: 8080
      weight: 1
status:
  parents:
  - conditions:
    - lastTransitionTime: "2023-08-17T08:35:03Z"
      message: Route was valid
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2023-08-17T08:35:03Z"
      message: All references resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: example.com/gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: testgateway1
      namespace: default
